# AvifKit

./: .gitignore  AvifKit.podspec  BUILD_COMPLETE_SUMMARY.md  CHANGELOG.md  DIAGNOSE_API30_DECODING_ERROR.md  EXECUTE_THESE_COMMANDS.md  GITHUB_ACTIONS_SETUP.md  INTEGRATION_GUIDE.md  IOS_PUBLISHING_GUIDE.md  IOS_PUBLISHING_READY.md  LIBAVIF_SETUP_SUMMARY.md  LIBAVIF_WARNING_DIAGNOSIS.md  LICENSE  MANUAL_STEPS_REQUIRED.md  PRE_PUBLISH_CHECKLIST.md  PUBLISHING_GUIDE.md  PUBLISH_V0.1.1.md  Package.swift  QUICK_GITHUB_SECRETS_SETUP.md  QUICK_START_IOS.md  README.md  RELEASE_NOTES_v0.1.3-SNAPSHOT.md  gradle.properties.template  konan.properties  settings.gradle.kts
.github/: release-notes-0.1.0.md
.github/workflows/: publish-ios.yml  publish.yml
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/alfikri/rizky/avifkit/: App.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/com/alfikri/rizky/avifkit/ui/screens/: ResultScreen.kt  UploadScreen.kt
composeApp/src/androidMain/kotlin/com/alfikri/rizky/avifkit/ui/viewmodel/: AvifConverterViewModel.kt
composeApp/src/androidMain/kotlin/com/alfikri/rizky/avifkit/utils/: FileDownloadHelper.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/androidUnitTest/kotlin/com/alfikri/rizky/avifkit/: ComposeAppAndroidUnitTest.kt
composeApp/src/commonMain/kotlin/com/alfikri/rizky/avifkit/ui/components/: CustomParams.kt  QualitySelector.kt
composeApp/src/commonMain/kotlin/com/alfikri/rizky/avifkit/ui/models/: UiModels.kt
gradle/: libs.versions.toml  publish.gradle.kts
iosApp/: Podfile.template
iosApp/Configuration/: Config.xcconfig
iosApp/Native/: iosApp-Bridging-Header.h
iosApp/iosApp/: ContentView.swift  Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Models/: Models.swift
iosApp/iosApp/ViewModels/: AvifConverterViewModel.swift
iosApp/iosApp/Views/: CustomParametersView.swift  QualitySelectorView.swift  ResultView.swift  UploadView.swift
scripts/: add-libavif-to-ios-app.sh  download-libavif-xcframework.sh  package-xcframework.sh  prepare-for-publish.sh  setup-android-libavif.sh  setup-ios-avif.sh  verify-integration.sh
shared/: README.md  build.gradle.kts
shared/src/androidMain/cpp/: CMakeLists.production.txt  CMakeLists.txt  avif_jni_wrapper.cpp  avif_jni_wrapper.placeholder.cpp  avif_jni_wrapper_production.cpp
shared/src/androidMain/kotlin/com/alfikri/rizky/avifkit/: AvifConverter.android.kt  PlatformBitmap.android.kt  PlatformFile.android.kt  PlatformFileFactory.android.kt
shared/src/commonMain/kotlin/com/alfikri/rizky/avifkit/: AvifConverter.kt  AvifError.kt  AvifSamples.kt  FileKitExport.kt  Models.kt  Platform.kt  PlatformBitmap.kt  PlatformFile.kt
shared/src/commonTest/kotlin/com/alfikri/rizky/avifkit/: SharedCommonTest.kt
shared/src/iosMain/kotlin/com/alfikri/rizky/avifkit/: AVIFNativeConverter.kt  AvifConverter.ios.kt  PlatformBitmap.ios.kt  PlatformFile.ios.kt  PlatformFileFactory.ios.kt
shared/src/iosMain/swift/: AVIFNativeConverter.swift
